[gd_scene load_steps=33 format=2]

[ext_resource path="res://images/probe.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://QuestionCollection.gd" type="Script" id=3]
[ext_resource path="res://questions/question3.tres" type="Resource" id=4]
[ext_resource path="res://PopUpCorrect.tscn" type="PackedScene" id=5]
[ext_resource path="res://PopUpWrong.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/btnAnswer.png" type="Texture" id=7]
[ext_resource path="res://images/panelQuestions.png" type="Texture" id=8]
[ext_resource path="res://images/interfaceExample.png" type="Texture" id=9]
[ext_resource path="res://questions/question4.tres" type="Resource" id=10]
[ext_resource path="res://questions/question5.tres" type="Resource" id=11]
[ext_resource path="res://questions/question1.tres" type="Resource" id=12]
[ext_resource path="res://questions/question2.tres" type="Resource" id=13]
[ext_resource path="res://questions/question6.tres" type="Resource" id=14]
[ext_resource path="res://questions/question10.tres" type="Resource" id=15]
[ext_resource path="res://questions/question13.tres" type="Resource" id=16]
[ext_resource path="res://questions/question9.tres" type="Resource" id=17]
[ext_resource path="res://questions/question7.tres" type="Resource" id=18]
[ext_resource path="res://questions/question11.tres" type="Resource" id=19]
[ext_resource path="res://questions/question12.tres" type="Resource" id=20]
[ext_resource path="res://questions/question14.tres" type="Resource" id=21]
[ext_resource path="res://questions/question8.tres" type="Resource" id=22]
[ext_resource path="res://images/route.png" type="Texture" id=23]
[ext_resource path="res://fonts/default_dynamicfontdata.tres" type="DynamicFontData" id=24]
[ext_resource path="res://images/btnCorrect.png" type="Texture" id=25]
[ext_resource path="res://images/btnWrong.png" type="Texture" id=26]
[ext_resource path="res://History.tscn" type="PackedScene" id=27]

[sub_resource type="Resource" id=9]
script = ExtResource( 3 )
questions = [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 21 ) ]

[sub_resource type="DynamicFont" id=13]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=14]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=12]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=11]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 24 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 1200.0, 139.0 ]
}
question_collection = SubResource( 9 )
texture_correct = ExtResource( 25 )
texture_wrong = ExtResource( 26 )
texture_normal = ExtResource( 7 )
time_to_show_pop_up = 2.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.427451, 1, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 285.0
margin_top = 56.0
margin_right = 1055.0
margin_bottom = 696.0
texture = ExtResource( 8 )
expand = true

[node name="btnNext" type="TextureButton" parent="."]
visible = false
margin_left = 1157.0
margin_top = 611.0
margin_right = 1247.0
margin_bottom = 688.0
texture_normal = ExtResource( 7 )
expand = true

[node name="lblNext" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 1158.0
margin_top = 612.0
margin_right = 1246.0
margin_bottom = 688.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 13 )
text = ">"
align = 1
valign = 1
autowrap = true

[node name="btnPrevious" type="TextureButton" parent="."]
visible = false
margin_left = 90.0
margin_top = 620.0
margin_right = 180.0
margin_bottom = 697.0
texture_normal = ExtResource( 7 )
expand = true

[node name="lblPrevious" type="Label" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 91.0
margin_top = 621.0
margin_right = 179.0
margin_bottom = 697.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 14 )
text = "<"
align = 1
valign = 1
autowrap = true

[node name="lblQuestion" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 350.0
margin_top = 226.0
margin_right = 988.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 12 )
text = "Exemplo de pergunta;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;"
autowrap = true

[node name="btnChoice1" type="TextureButton" parent="."]
margin_left = 349.0
margin_top = 335.0
margin_right = 682.0
margin_bottom = 412.0
rect_scale = Vector2( 1.92, 1.2 )
texture_normal = ExtResource( 7 )
expand = true

[node name="lblChoice1" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 364.833
margin_top = 356.666
margin_right = 974.833
margin_bottom = 421.666
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 11 )
text = "Answer1"
autowrap = true

[node name="btnChoice2" type="TextureButton" parent="."]
margin_left = 349.0
margin_top = 447.0
margin_right = 682.0
margin_bottom = 524.0
rect_scale = Vector2( 1.92, 1.2 )
texture_normal = ExtResource( 7 )
expand = true

[node name="lblChoice2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 365.833
margin_top = 464.5
margin_right = 975.833
margin_bottom = 529.5
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 12 )
text = "Answer1"
autowrap = true

[node name="btnChoice3" type="TextureButton" parent="."]
margin_left = 346.0
margin_top = 561.0
margin_right = 679.0
margin_bottom = 638.0
rect_scale = Vector2( 1.92, 1.2 )
texture_normal = ExtResource( 7 )
expand = true

[node name="lblChoice3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 363.666
margin_top = 582.167
margin_right = 973.666
margin_bottom = 647.167
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 12 )
text = "Answer1"
autowrap = true

[node name="PopUpCorrect" parent="." instance=ExtResource( 5 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_top = 126.0
margin_right = 202.0
margin_bottom = 126.0
rect_scale = Vector2( 0.98, 1.059 )

[node name="PopUpWrong" parent="." instance=ExtResource( 6 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 221.0
margin_top = 31.0
margin_right = 221.0
margin_bottom = 31.0
rect_scale = Vector2( 0.978, 1.051 )

[node name="History" parent="." instance=ExtResource( 27 )]
visible = false

[node name="Route" type="Sprite" parent="."]
position = Vector2( 1207, 422.32 )
scale = Vector2( 0.35, 0.342 )
texture = ExtResource( 23 )

[node name="ParkerProbe" type="Sprite" parent="."]
position = Vector2( 1200.5, 676.32 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="InterfaceExample" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.678431 )
position = Vector2( -0.833336, -2.5 )
scale = Vector2( 0.98, 1 )
texture = ExtResource( 9 )
centered = false

[connection signal="button_up" from="btnChoice1" to="." method="_on_btnChoice1_button_up"]
[connection signal="button_up" from="btnChoice2" to="." method="_on_btnChoice2_button_up"]
[connection signal="button_up" from="btnChoice3" to="." method="_on_btnChoice3_button_up"]
[connection signal="button_up" from="PopUpCorrect/btnExit" to="." method="_on_btnExitCorrect_button_up"]
[connection signal="button_up" from="PopUpWrong/btnExit" to="." method="_on_btnExitWrong_button_up"]

[editable path="PopUpCorrect"]
[editable path="PopUpWrong"]
